--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -44,34 +44,19 @@
     "slideshow": {
      "slide_type": ""
     },
-    "tags": []
+    "tags": [
+     "remove-input"
+    ]
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'myst_nb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01maltair\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01malt\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmyst_nb\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m glue\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'myst_nb'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import yfinance as yf\n",
     "import pandas as pd\n",
-    "import altair as alt\n",
-    "from myst_nb import glue\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import set_config"
+    "from myst_nb import glue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "63270171-07bf-4690-86d5-dff5d7c73f86",
    "metadata": {
     "editable": true,
@@ -82,10 +67,37 @@
      "remove-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dummy_model_score</th>\n      <th>logistic_regression_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.759259</td>\n      <td>0.753086</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "application/papermill.record/text/plain": "   dummy_model_score  logistic_regression_score\n0           0.759259                   0.753086"
+     },
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "result_df"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>gspc</th>\n      <th>gspc_next_year_pct_chg</th>\n      <th>gspc_prev_year_pct_chg</th>\n      <th>inflation_rate_pct</th>\n      <th>inflation_rate_pct_chg</th>\n      <th>interest_rate_pct</th>\n      <th>interest_rate_pct_chg</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1955-07-31</td>\n      <td>43.520000</td>\n      <td>13.488049</td>\n      <td>40.932648</td>\n      <td>-0.371747</td>\n      <td>-0.371747</td>\n      <td>1.69</td>\n      <td>0.94</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1955-08-31</td>\n      <td>43.180000</td>\n      <td>10.027786</td>\n      <td>44.753605</td>\n      <td>0.373134</td>\n      <td>0.744882</td>\n      <td>2.00</td>\n      <td>0.62</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1955-09-30</td>\n      <td>43.669998</td>\n      <td>3.847035</td>\n      <td>35.159382</td>\n      <td>0.373134</td>\n      <td>1.113875</td>\n      <td>2.19</td>\n      <td>1.00</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1955-10-31</td>\n      <td>42.340000</td>\n      <td>7.652342</td>\n      <td>33.648989</td>\n      <td>0.373134</td>\n      <td>0.744882</td>\n      <td>2.25</td>\n      <td>1.25</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1955-11-30</td>\n      <td>45.509998</td>\n      <td>-0.944840</td>\n      <td>32.914708</td>\n      <td>0.374532</td>\n      <td>1.118026</td>\n      <td>2.25</td>\n      <td>1.37</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "application/papermill.record/text/plain": "         date       gspc  gspc_next_year_pct_chg  gspc_prev_year_pct_chg  \\\n0  1955-07-31  43.520000               13.488049               40.932648   \n1  1955-08-31  43.180000               10.027786               44.753605   \n2  1955-09-30  43.669998                3.847035               35.159382   \n3  1955-10-31  42.340000                7.652342               33.648989   \n4  1955-11-30  45.509998               -0.944840               32.914708   \n\n   inflation_rate_pct  inflation_rate_pct_chg  interest_rate_pct  \\\n0           -0.371747               -0.371747               1.69   \n1            0.373134                0.744882               2.00   \n2            0.373134                1.113875               2.19   \n3            0.373134                0.744882               2.25   \n4            0.374532                1.118026               2.25   \n\n   interest_rate_pct_chg  target  \n0                   0.94    True  \n1                   0.62    True  \n2                   1.00    True  \n3                   1.25    True  \n4                   1.37   False  "
+     },
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "data_head"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "result_df=pd.read_csv(\"../results/tables/mdl_result.csv\")\n",
-    "glue(\"result_df\", result_df.iloc[:, 1:2], display=False)\n",
+    "result_df=pd.read_csv(\"../results/tables/mdl_result.csv\")[['dummy_model_score', 'logistic_regression_score']]\n",
+    "glue(\"result_df\", result_df, display=False)\n",
     "\n",
     "data_head=pd.read_csv(\"../Data/Processed/processed_data.csv\").head(5)\n",
     "glue(\"data_head\", data_head, display=False)"
@@ -93,21 +105,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "40ce1e26-d231-42c4-b51c-33753b220372",
    "metadata": {
     "editable": true,
     "slideshow": {
      "slide_type": ""
     },
-    "tags": []
+    "tags": [
+     "remove-input"
+    ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dummy_model_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.759259</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "application/papermill.record/text/plain": "   dummy_model_score\n0           0.759259"
+     },
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "dummy_mean_test_score"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>logistic_regression_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.753086</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "application/papermill.record/text/plain": "   logistic_regression_score\n0                   0.753086"
+     },
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "regression_mean_test_score"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "dummy_mean_test_score = result_df[\"dummy_model_score\"]\n",
+    "dummy_mean_test_score = result_df[[\"dummy_model_score\"]]\n",
     "glue(\"dummy_mean_test_score\",dummy_mean_test_score, display=False)\n",
-    "\n",
-    "regression_mean_test_score = result_df[\"logistic_regression_score\"]\n",
+    "regression_mean_test_score = result_df[[\"logistic_regression_score\"]]\n",
     "glue(\"regression_mean_test_score\",regression_mean_test_score, display=False)"
    ]
   },
