change headings and reorg

--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -5,7 +5,7 @@
    "id": "3d1f90cb45bbbc67",
    "metadata": {},
    "source": [
-    "# Predicting direction of stock price from interest rate and inflation rate"
+    "## Predicting direction of stock price from interest rate and inflation rate"
    ]
   },
   {
@@ -153,16 +153,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7981ce5d4e8beff8",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "source": [
-    "## Summary"
+    "## Summary\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our exploration of the impact of inflation and interest rates on stock returns, we employed logistic regression to build a predictive model. The model, trained on data sourced from the S&P500, CPI, and Federal funds rate, exhibited reasonable performance. However, it is crucial to note instances where the model made false-negative predictions, as it could lead to missed investment opportunities. To enhance the model's reliability, ongoing research and refinement are recommended to mitigate false negatives and ensure its suitability for predicting profitable stock market investments.\n",
+    "\n",
+    "Utilizing Python and packages such as Numpy, Pandas, Altair, and Scikit-learn, our analysis incorporated data preprocessing to address variations in sampling frequencies among S&P500 index, CPI, and interest rate data. Resampling to the last day of every month and filtering noise through monthly median calculations were crucial steps in preparing the data for effective analysis. "
    ]
   },
   {
@@ -180,22 +182,19 @@
     "During the COVID-19 pandemic, central banks around the world lowered interest rates to ease economical challenges posed by the pandemic. As the pandemic ease, the lowered interest rate leads to excess consumer spending which increased the inflation rate to unacceptable levels. In order to control the inflation and have it return to pre-pandemic levels, the central bank raised the interest rate sharply to the highest level in 15 years. Nowadays, inflation and interest rate often takes the headline of financial news and with more than 50% of American households owning stocks {cite}`Caporal2023StockOwnership`, our team is curious to find out how inflation and interest rate affect stock returns. We ask the question: given inflation rate and interest rate data, can we predict whether we will profit if we invest in a stock market index and hold for 1 year.\n",
     "\n",
     "\n",
-    "## Methods & Results\n",
+    "## Methods \n",
     "### Data\n",
-    "#### Raw\n",
     "1. We decided to use the Standard & Poors 500 Index (S&P500) as stock market proxy. The index tracks stocks of 500 largest companies in USA. The price of S&P500 is obtained from Yahoo Finance {cite}`YahooFinanceSP500`.\n",
     "2. Inflation data is obtained from calculating the change of consumer price index (CPI) {cite}`YahooFinanceSP500`. We obtained United States CPI from the Federal Reserve Economic Data website and computed yearly inflation rate.\n",
     "3. We can use the Federal funds rate as proxy for interest rate. It is the target interest rate set by the Federal reserve for commercial banks to lend and borrow overnight. We obtained the Federal funds rate from the Federal Reserve Economic Data website.\n",
     "\n",
-    "#### Derived\n",
-    "We derived the change in inflation rate and change in interest rate from the data we have as additional feature. We often hear on the news that inflation and interest rate are increasing or decreasing thus we thought these 2 features might provide additional predicting power for our model\n",
+    "We derived the change in inflation rate and change in interest rate from the data we have as additional feature. We often hear on the news that inflation and interest rate are increasing or decreasing thus we thought these 2 features might provide additional predicting power for our model.\n",
     "\n",
-    "#### Analysis\n",
+    "### Analysis\n",
     "\n",
     "The Python programming language {cite}`van1995python` and the following Python packages were used to perform the analysis:  Numpy {cite}`harris2020array`, Pandas {cite}`mckinney-proc-scipy-2010`, Altair {cite}`vanderplas2018altair`, Scikit-learn {cite}`pedregosa2011scikit`. The code used to perform the EDA and create the report which can be found here: https://github.com/UBC-MDS/dsci_522_group_3/tree/main.\n",
     "\n",
-    "#### Remarks\n",
-    "##### Resampling\n",
+    "### Remarks\n",
     "S&P500 index, CPI, and Interest rate data we obtained have different sampling frequencies. CPI data has the lowest frequency and it is sampled every first day of the month. We decided to resample all data to last day of every month thus it is easy to calculate and interpret year-year and month-month change. Interest rate data was sampled daily and it is noisy. We decided to filter the data by taking monthly median during resampling. The following table summarizes how data preprocessing was done.\n",
     "\n",
     "\n",
@@ -203,10 +202,7 @@
     "| -------- | -------- | -------- |\n",
     "| S&P 500 Index | daily | Take the value from last day of month. If we do not have data for last day of month, use the data from the closest previous date |\n",
     "| CPI | first day of every month | Offset the date by 1 to last day of last month. We thought the value difference for 1 day is neglegible |\n",
-    "| Interest Rate | daily | Resample to the last day of month by taking the median price of for every day of the month to filter for noise |\n",
-    "\n",
-    "\n",
-    " \n"
+    "| Interest Rate | daily | Resample to the last day of month by taking the median price of for every day of the month to filter for noise |\n"
    ]
   },
   {
@@ -268,8 +264,19 @@
     "tags": []
    },
    "source": [
-    "### EDA\n",
-    "#### Time series plot of all variables"
+    "## Exploratory Data Analysis\n",
+    "\n",
+    "- No NA or missing data in dataset\n",
+    "- One row record the observation for one month.\n",
+    "- The time series data is from 1955-07 to 2022-10, which contains 808 observations.\n",
+    "- The target is `True` when the stock price went up, and is `False` when the stock price went down.\n",
+    "- We will use four columns `inflation_rate_pct`, `interest_rate_pct`,\n",
+    "       `inflation_rate_pct_chg`, `interest_rate_pct_chg`,\n",
+    "       `gspc_prev_year_pct_chg` as features, and the target as response in this binary classification problem. \n",
+    "\n",
+    "### Time Series Plots of Features\n",
+    "\n",
+    "The visualization of time series may reveal the pattern of data, we plot them as follows."
    ]
   },
   {
@@ -288,27 +295,7 @@
     "width: 600px\n",
     "name: time series\n",
     "---\n",
-    "Time series plot of all variables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "117fba4b",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "- No NA or missing data in df\n",
-    "- One row record the observation for one month.\n",
-    "- The time series data is from 1955-07 to 2022-10, which contains 808 observations.\n",
-    "- The target is True when the stock price went up, and is False when the stock price went down.\n",
-    "- We will use four columns 'inflation_rate_pct', 'interest_rate_pct',\n",
-    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
-    "       'gspc_prev_year_pct_chg' as features, and the target as response in this binary classification problem. "
+    "Time Series Plots of Features"
    ]
   },
   {
@@ -322,7 +309,8 @@
     "tags": []
    },
    "source": [
-    "## Split data and EDA"
+    "### Histograms of Features\n",
+    "We plot the histograms to see the range and mode of interesting features."
    ]
   },
   {
@@ -341,7 +329,14 @@
     "width: 600px\n",
     "name: histogram\n",
     "---\n",
-    "Histograms of each variable"
+    "Histograms of Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scatterplots of Feature Pairs"
    ]
   },
   {
@@ -355,15 +350,15 @@
     "tags": []
    },
    "source": [
-    "- Spearmean's rank correlation test revealed some potential correlation between columns: \n",
+    "Spearmean's rank correlation test may reveal some potential correlation, we draw the scatterplots of following feature pairs:\n",
     "\n",
-    "**interest_rate_pct vs inflation_rate_pct** \n",
+    "`interest_rate_pct vs inflation_rate_pct`\n",
     "\n",
-    "**interest_rate_pct_chg vs inflation_rate_pct_chg**\n",
+    "`interest_rate_pct_chg vs inflation_rate_pct_chg`\n",
     "\n",
-    "**inflation_rate_pct_chg vs inflation_rate_pct**\n",
+    "`inflation_rate_pct_chg vs inflation_rate_pct`\n",
     "\n",
-    "**interest_rate_pct_chg vs interest_rate_pct**"
+    "`interest_rate_pct_chg vs interest_rate_pct`"
    ]
   },
   {
@@ -413,7 +408,7 @@
     "tags": []
    },
    "source": [
-    "### Model"
+    "## Model"
    ]
   },
   {
@@ -427,31 +422,10 @@
     "tags": []
    },
    "source": [
-    "### Data\n",
-    "The dataset comprises records for 808 months, with each row featuring a crucial predictor for the corresponding month. Additionally, it indicates whether there was an increase or decrease in the S&P 500 index, denoted by the values True or False.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2818f2d",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
     "### Preprocessing Data\n",
+    "The dataset comprises records for 808 months, with each row featuring a crucial predictor for the corresponding month. Additionally, it indicates whether there was an increase or decrease in the S&P 500 index, denoted by the values `True` or `False`.\n",
     "\n",
-    "#### Numeric features:\n",
-    "- 'inflation_rate_pct'\n",
-    "- 'interest_rate_pct'\n",
-    "- 'inflation_rate_pct_chg'\n",
-    "- 'interest_rate_pct_chg'\n",
-    "- 'gspc_prev_year_pct_chg'\n",
-    "\n",
-    "Since there is no missing values, imputation is not necessary. And we apply a StandardScaler."
+    "We find numeric features are: `inflation_rate_pct`, `interest_rate_pct`, `inflation_rate_pct_chg`, `interest_rate_pct_chg`, `gspc_prev_year_pct_chg`. Since there is no missing values, imputation is not necessary and we apply a standardscaler.\n"
    ]
   },
   {
@@ -465,8 +439,7 @@
     "tags": []
    },
    "source": [
-    "### Model Selection\n",
-    "#### Logistic Regression\n",
+    "### Logistic Regression\n",
     "Our focus is on identifying whether there is an increase in the S&P 500 index, making it a classification problem. To tackle this, we utilize Logistic Regression."
    ]
   },
@@ -508,7 +481,7 @@
     "tags": []
    },
    "source": [
-    "#### Dummy Regression"
+    "### Dummy Regression"
    ]
   },
   {
@@ -541,7 +514,7 @@
     "tags": []
    },
    "source": [
-    "### Discussion\n",
+    "## Discussion\n",
     "The model training is designed such that it follows the Golden Rule. The test data of dummy regression yields an accuracy of {glue:text}`dummy_mean_test_score`%. The accuracy of dummy regression is better then the accuracy of logistic regression. In the preceding examination, we utilize `Logistic Regression` and `Dummy Regression`. Consequently, the result does not show advantage of `Logistic Regression` over `Dummy Regression`. (see {glue:text}`result_df`%) Further data preprocessing is needed to enhance the overall effectiveness of the model. This is aligned with expectation, because we do not have enough meaningful features to extract information that is helpful for a more accurate categorization. Also, we have imbalanced classes, which can also prevent the model from determining whether the index will grow. \n",
     "\n",
     "The model's performance may be sensitive to hyperparameter settings, therefore it can be helpful to improve the model performance to experiment with different configurations through hyperparameter tuning. In the future, to improve the performance of the model, we may want to consult with specialists of finance field to get more key information about the topic. This will allow more features to be added to the data and positively impact the model training. \n"
@@ -571,7 +544,7 @@
    "id": "30c78fe1-50f2-4272-8a8c-2e29415461ba",
    "metadata": {},
    "source": [
-    "### Reference"
+    "## Reference"
    ]
   },
   {
