--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "result_df=pd.read_csv(\"../results/tables/mdl_result.csv\")[['dummy_model_score', 'logistic_regression_score']]\n",
+    "result_df=pd.read_csv(\"../results/tables/mdl_result.csv\")[['dummy_model_precision_score (%)', 'logistic_regression_precision_score (%)']]\n",
     "glue(\"result_df\", result_df, display=False)\n",
     "\n",
     "data_head=pd.read_csv(\"../Data/Processed/processed_data.csv\").head(5)\n",
@@ -145,9 +145,9 @@
     }
    ],
    "source": [
-    "dummy_mean_test_score = result_df[[\"dummy_model_score\"]]\n",
+    "dummy_mean_test_score = result_df[['dummy_model_precision_score (%)']]\n",
     "glue(\"dummy_mean_test_score\",dummy_mean_test_score, display=False)\n",
-    "regression_mean_test_score = result_df[[\"logistic_regression_score\"]]\n",
+    "regression_mean_test_score = result_df[['logistic_regression_precision_score (%)']]\n",
     "glue(\"regression_mean_test_score\",regression_mean_test_score, display=False)"
    ]
   },
