--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -179,6 +179,13 @@
    },
    "source": [
     "## Introduction\n",
+    "\n",
+    "Imagine you're an investor navigating the dynamic world of financial markets, where stock prices fluctuate based on a myriad of factors. In your quest for informed investment decisions, you encounter a challenging scenario—predicting whether a stock's price will increase or decrease. This dichotomy is the essence of your binary classification dataset, where each instance represents a unique opportunity to make a profitable move.\n",
+    "\n",
+    "In this financial journey, you seek a predictive model to guide your investment choices. The stakes are high; every decision can impact your portfolio's performance. The classification problem becomes a tool for enhancing your ability to foresee market movements. As an investor, the ultimate goal is clear: maximizing returns. The dataset becomes a treasure trove of historical patterns, market indicators, and economic variables, each holding clues to potential price shifts.\n",
+    "\n",
+    "Armed with this data, you embark on a quest to build a robust model, one that aligns with the goal of making money in every investment. Success in this endeavor promises not just financial gain, but a strategic advantage in navigating the complexities of the stock market—a journey where each prediction carries the weight of potential profit, and every investment is a step towards achieving your financial aspirations.\n",
+    "\n",
     "During the COVID-19 pandemic, central banks around the world lowered interest rates to ease economical challenges posed by the pandemic. As the pandemic ease, the lowered interest rate leads to excess consumer spending which increased the inflation rate to unacceptable levels. In order to control the inflation and have it return to pre-pandemic levels, the central bank raised the interest rate sharply to the highest level in 15 years. Nowadays, inflation and interest rate often takes the headline of financial news and with more than 50% of American households owning stocks {cite}`Caporal2023StockOwnership`, our team is curious to find out how inflation and interest rate affect stock returns. We ask the question: given inflation rate and interest rate data, can we predict whether we will profit if we invest in a stock market index and hold for 1 year.\n",
     "\n",
     "\n",
