--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -180,9 +180,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Imagine you're an investor navigating the dynamic world of financial markets, where stock prices fluctuate based on a myriad of factors. In your quest for informed investment decisions, you encounter a challenging scenario—predicting whether a stock's price will increase or decrease. This dichotomy is the essence of your binary classification dataset, where each instance represents a unique opportunity to make a profitable move.\n",
-    "\n",
-    "In this financial journey, you seek a predictive model to guide your investment choices. The stakes are high; every decision can impact your portfolio's performance. The classification problem becomes a tool for enhancing your ability to foresee market movements. As an investor, the ultimate goal is clear: maximizing returns. The dataset becomes a treasure trove of historical patterns, market indicators, and economic variables, each holding clues to potential price shifts.\n",
+    "Imagine you're an investor navigating the dynamic world of financial markets, where stock prices fluctuate based on a myriad of factors. In your quest for informed investment decisions, you encounter a challenging scenario—predicting whether a stock's price will increase or decrease. This dichotomy is the essence of your binary classification dataset, where each instance represents a unique opportunity to make a profitable move. In this financial journey, you seek a predictive model to guide your investment choices. The stakes are high; every decision can impact your portfolio's performance. The classification problem becomes a tool for enhancing your ability to foresee market movements. As an investor, the ultimate goal is clear: maximizing returns. The dataset becomes a treasure trove of historical patterns, market indicators, and economic variables, each holding clues to potential price shifts.\n",
     "\n",
     "Armed with this data, you embark on a quest to build a robust model, one that aligns with the goal of making money in every investment. Success in this endeavor promises not just financial gain, but a strategic advantage in navigating the complexities of the stock market—a journey where each prediction carries the weight of potential profit, and every investment is a step towards achieving your financial aspirations.\n",
     "\n",
@@ -225,7 +223,7 @@
    "source": [
     "### Read Data From Web\n",
     "\n",
-    "Here we read all data.\n",
+    "The desciption of our data is shown below.\n",
     "\n",
     "#### columns\n",
     "| column name            | description                                                                                |\n",
@@ -273,13 +271,14 @@
    "source": [
     "## Exploratory Data Analysis\n",
     "\n",
+    "In our preliminary analysis, we find out:\n",
     "- No NA or missing data in dataset\n",
     "- One row record the observation for one month.\n",
     "- The time series data is from 1955-07 to 2022-10, which contains 808 observations.\n",
     "- The target is `True` when the stock price went up, and is `False` when the stock price went down.\n",
-    "- We will use four columns `inflation_rate_pct`, `interest_rate_pct`,\n",
+    "- The four columns `inflation_rate_pct`, `interest_rate_pct`,\n",
     "       `inflation_rate_pct_chg`, `interest_rate_pct_chg`,\n",
-    "       `gspc_prev_year_pct_chg` as features, and the target as response in this binary classification problem. \n",
+    "       `gspc_prev_year_pct_chg` are treated as features, and the target is treated as response in this binary classification problem. \n",
     "\n",
     "### Time Series Plots of Features\n",
     "\n",
