add the motivation of pick lr model pointed out by sean-m-mckay

--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -428,7 +428,7 @@
     "### Preprocessing Data\n",
     "The dataset comprises records for 808 months, with each row featuring a crucial predictor for the corresponding month. Additionally, it indicates whether there was an increase or decrease in the S&P 500 index, denoted by the values `True` or `False`.\n",
     "\n",
-    "We find numeric features are: `inflation_rate_pct`, `interest_rate_pct`, `inflation_rate_pct_chg`, `interest_rate_pct_chg`, `gspc_prev_year_pct_chg`. Since there is no missing values, imputation is not necessary and we apply a standardscaler.\n"
+    "We find numeric features are: `inflation_rate_pct`, `interest_rate_pct`, `inflation_rate_pct_chg`, `interest_rate_pct_chg`, `gspc_prev_year_pct_chg`. Since there is no missing values, imputation is not necessary. As the characteristics were exclusively numerical, we utilized a StandardScaler to guarantee the normalization of feature matrix.\n"
    ]
   },
   {
@@ -520,9 +520,14 @@
     "## Discussion\n",
     "\n",
     "\n",
-    "### Possible Reasons for Worse Performance of LR Model over Dummy Model\n",
+    "### Possible Reasons for Worse Performance of the Logistic Regression Model over Dummy Model\n",
     "The quality of the data, including missing values, outliers, or noise, can significantly impact the performance of any predictive model. If the data is noisy or contains irrelevant information, the model's accuracy may suffer. Stock price movements are influenced by a wide range of factors, and if the model does not have access to relevant information, it may struggle to make accurate predictions.\n",
     "\n",
+    "### Motivation of Picking the Logistic Regression Model\n",
+    "Logistic regression is specifically designed for binary classification problems where the outcome variable is dichotomous, meaning it has two possible classes (e.g., 0 or 1, true or false, positive or negative). The coefficients in logistic regression represent the log-odds of the target variable, making it easy to interpret the impact of each feature on the likelihood of a particular outcome. This interpretability is valuable for understanding the relationships between variables.\n",
+    "\n",
+    "\n",
+    "### Overall\n",
     "The model training is designed such that it follows the Golden Rule, which refers to \"despite our utmost concern for test error, it is crucial to emphasize that the training phase must remain completely unaffected by the test data.\" The test data of dummy regression yields a precision of {glue:text}`dummy_mean_test_score`%. The precision of dummy regression is better then the precision of logistic regression. In the preceding examination, we utilize `Logistic Regression` and `Dummy Regression`. Consequently, the result does not show advantage of `Logistic Regression` over `Dummy Regression`. (see {glue:text}`result_df`%) Further data preprocessing is needed to enhance the overall effectiveness of the model. This is aligned with expectation, because we do not have enough meaningful features to extract information that is helpful for a more accurate categorization. Also, we have imbalanced classes, which can also prevent the model from determining whether the index will grow. \n",
     "\n",
     "The model's performance may be sensitive to hyperparameter settings, therefore it can be helpful to improve the model performance to experiment with different configurations through hyperparameter tuning. In the future, to improve the performance of the model, we may want to consult with specialists of finance field to get more key information about the topic. This will allow more features to be added to the data and positively impact the model training. \n"
