modify the layout and solve heading issues pointed out by riyaeliza123

--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "_We utilized logistic regression to analyze the stock price data and provided a predictive model._\n",
     "\n",
-    "by Allan Lee, Jianhao Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 3)\n",
+    "by Allan Lee, Andy Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 3)\n",
     "\n",
     "2023/12/06"
    ]
@@ -519,6 +519,7 @@
    "source": [
     "## Discussion\n",
     "\n",
+    "In concluding this report, we express gratitude for the valuable input received from four reviewers and aim to address significant queries in the discussion section.\n",
     "\n",
     "### Possible Reasons for Worse Performance of the Logistic Regression Model over Dummy Model\n",
     "The quality of the data, including missing values, outliers, or noise, can significantly impact the performance of any predictive model. If the data is noisy or contains irrelevant information, the model's accuracy may suffer. Stock price movements are influenced by a wide range of factors, and if the model does not have access to relevant information, it may struggle to make accurate predictions.\n",
