Some discussion using metrics other than accuracy pointed out by sean-m-mckay

--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -443,7 +443,8 @@
    },
    "source": [
     "### Logistic Regression\n",
-    "Our focus is on identifying whether there is an increase in the S&P 500 index, making it a classification problem. To tackle this, we utilize Logistic Regression."
+    "\n",
+    "Predicting exact stock prices is challenging, so we simplify the task by transforming it into a binary classification problem—predicting whether the stock price will increase or decrease. Our focus is on identifying whether there is an increase in the S&P 500 index, making it a binary classification problem. To tackle this, we utilize Logistic Regression."
    ]
   },
   {
